# platform

./: .gitignore  CMakeLists.txt  README.md  platform  platforms.txt
src/: PlatformManager.cpp  Player.cpp  Player.h  main.cpp
src/heads/: PlatformManager.h
